--- a/Arrays/pom.xml
+++ b/Arrays/pom.xml
@@ -7,8 +7,7 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>22</maven.compiler.source>
-        <maven.compiler.target>22</maven.compiler.target>
+        <maven.compiler.release>25</maven.compiler.release>
         <exec.mainClass>com.mycompany.arrays.Arrays</exec.mainClass>
     </properties>
 </project>
